--- a/t2.html
+++ b/t2.html
@@ -474,7 +474,7 @@
             <h3>الوصول الكامل للبرنامج</h3>
             <p>لعرض باقي أيام الأسبوع والحصول على جميع الميزات، يرجى الاشتراك في النسخة الكاملة.</p>
             <h4>للدفع واشتراك تواصل معنا:</h4>
-            <p><strong>Instapay Link:</strong> <a href="YOUR_INSTAPAY_LINK" target="_blank">اضغط هنا للدفع</a></p>
+            <p><strong>Instapay Link:</strong> <a href="https://ipn.eg/S/mahmoud79070/instapay/4DCcvb" target="_blank">اضغط هنا للدفع</a></p>
             <p><strong>WhatsApp:</strong> +201552402912</p>
         </div>
     </div>
