--- a/index.html
+++ b/index.html
@@ -1205,6 +1205,7 @@
         }
 
        function populateDropdowns() {
+            debugger; // هذا السطر سيقوم بإيقاف الكود هنا مؤقتًا
     // إعادة كتابة الوظيفة لتكون أكثر استقرارًا
 
     const classSelect = document.getElementById('className');
