--- a/index.html
+++ b/index.html
@@ -305,6 +305,8 @@
             <form id="signup-form" class="auth-form">
                 <input type="email" id="signup-email" placeholder="البريد الإلكتروني" required>
                 <input type="password" id="signup-password" placeholder="كلمة المرور" required>
+                <input type="text" id="signup-username" placeholder="اسم المستخدم" required>
+                 <input type="tel" id="signup-phone" placeholder="رقم الهاتف" required>
                 <button type="submit">إنشاء حساب</button>
             </form>
             <p class="auth-toggle">لديك حساب بالفعل؟ قم بتسجيل الدخول</p>
