--- a/index0.html
+++ b/index0.html
@@ -735,33 +735,30 @@
             await batch.commit();
         }
 
-        async function loadUserData() {
+     async function loadUserData() {
     if (!currentUser) return;
-    console.log("1. Starting to load user data..."); // نقطة التتبع الأولى
-
+    
+    // جلب كل البيانات دفعة واحدة
     const dataCollections = ['classes', 'subjects', 'teachers', 'quotas', 'placements', 'settings'];
     const promises = dataCollections.map(col => db.collection('users').doc(currentUser.uid).collection('data').doc(col).get());
     const [classesDoc, subjectsDoc, teachersDoc, quotasDoc, placementsDoc, settingsDoc] = await Promise.all(promises);
 
-    console.log("2. Fetched 'classes' document from Firestore. Does it exist?", classesDoc.exists); // نقطة التتبع الثانية
-    if (classesDoc.exists) {
-        console.log("3. Data inside 'classes' document:", classesDoc.data()); // نقطة التتبع الثالثة
-    }
-
-    allClasses = classesDoc.exists ? classesDoc.data().list : [];
-    allSubjects = subjectsDoc.exists ? subjectsDoc.data().list : [];
-    allTeachers = teachersDoc.exists ? teachersDoc.data().list : [];
-    quotas = quotasDoc.exists ? quotasDoc.data().list : [];
-    placements = placementsDoc.exists ? placementsDoc.data() : {};
-    scheduleSettings = settingsDoc.exists ? settingsDoc.data() : {
+    // التحقق من سلامة البيانات قبل إسنادها (هذا هو الإصلاح الرئيسي)
+    // نتأكد أن الخاصية list موجودة وأنها مصفوفة بالفعل
+    allClasses = (classesDoc.exists && Array.isArray(classesDoc.data().list)) ? classesDoc.data().list : [];
+    allSubjects = (subjectsDoc.exists && Array.isArray(subjectsDoc.data().list)) ? subjectsDoc.data().list : [];
+    allTeachers = (teachersDoc.exists && Array.isArray(teachersDoc.data().list)) ? teachersDoc.data().list : [];
+    quotas = (quotasDoc.exists && Array.isArray(quotasDoc.data().list)) ? quotasDoc.data().list : [];
+    
+    // نتأكد أن البيانات هي كائن (object)
+    placements = (placementsDoc.exists && typeof placementsDoc.data() === 'object') ? placementsDoc.data() : {};
+    scheduleSettings = (settingsDoc.exists && typeof settingsDoc.data() === 'object') ? settingsDoc.data() : {
         schoolName: 'مدرستي الابتدائية', academicYear: '2025-2026', schedulerName: 'مسئول الجدول',
         daysCount: 5, periodsCount: 7, startDay: 'الأحد', breakAfterPeriod: 4,
         periodDuration: 45, startTime: '08:00', showBreak: true, showTime: true,
         fontSize: 14, displayStyle: 'cards',
         firstColumnWidth: 100, dataColumnWidth: 85, dataRowHeight: 85
     };
-
-    console.log("4. 'allClasses' variable is now:", allClasses); // نقطة التتبع الرابعة
 }
 
         function renderAllListsAndTables() {
@@ -2247,3 +2244,4 @@ async function exportAllDaysPDF() {
 </body>
 </html>
 "
+
